--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 </head>
 <body>
 
-  <div class="carosello-container">
-    <button class="scroll-btn" id="scroll-up">↑ Su</button>
-    <div class="carosello">
-        <img src="img/01.webp" alt="Immagine 1">
-        <img src="img/02.webp" alt="Immagine 2">
-        <img src="img/03.webp" alt="Immagine 3">
-        <img src="img/04.webp" alt="Immagine 4">
-        <img src="img/05.webp" alt="Immagine 5">
+  <div class="main-wrapper">
+    <div class="slider">
+
+      <!-- Contenitore immagini -->
+      <div class="items-wrapper">
+        <img class="hide" src="img/01.webp">
+      </div>
+
+      <div class="btn-arrow up">&uarr;</div>
+      <div class="btn-arrow down">&darr;</div>
+
     </div>
-    <button class="scroll-btn" id="scroll-down">↓ Giù</button>
+
+  </div>
+
 </div>
 
   <script src="scrpt.js"></script>
