--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <!-- Contenitore immagini -->
       <div class="items-wrapper">
-        <img class="hide" src="img/01.webp">
+        <!-- <img class="hide img" src="img/01.webp"> -->
       </div>
-
+      <!-- Contenitore bottoni -->
       <div class="btn-arrow up">&uarr;</div>
       <div class="btn-arrow down">&darr;</div>
 
